--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Diário</title>
+
+    <!-- Estilos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore-compat.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- Open Graph (Facebook, WhatsApp, etc.) -->
+    <meta property="og:title" content="Nosso Diário">
+    <meta property="og:description" content="Nossos momentos especiais reunidos em um só lugar.">
+    <meta property="og:image" content="https://thomasmfontes.github.io/diario/capa.jpg">
+    <meta property="og:url" content="https://thomasmfontes.github.io/diario/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nosso Diário">
+    <meta name="twitter:description" content="Nossos momentos especiais reunidos em um só lugar.">
+    <meta name="twitter:image" content="https://thomasmfontes.github.io/diario/capa.jpg">
 </head>
 
 <body>
