--- a/index.html
+++ b/index.html
@@ -53,7 +53,15 @@
                     <div class="mb-3">
                         <label for="image" class="form-label">Foto (opcional)</label>
                         <input type="file" id="image" accept="image/*" class="form-control">
-                    </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="autor" class="form-label">Quem registrou</label>
+                            <select id="autor" class="form-select" required>
+                                <option value="">Selecione</option>
+                                <option value="Thomas">Thomas</option>
+                                <option value="Gabriela">Gabriela</option>
+                            </select>
+                        </div>
                     <button type="submit" class="btn btn-primary w-100">Salvar Memória</button>
                 </form>
             </div>
