--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore-compat.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Open Graph (Facebook, WhatsApp, etc.) -->
@@ -29,9 +30,10 @@
 
 <body>
     <div class="container py-5">
-        <header class="text-center mb-5">
+        <header class="text-center mb-3">
             <h1 class="title-font display-4 text-primary">Nosso Diário</h1>
             <p class="lead text-muted">Nossos momentos inesquecíveis ❤️</p>
+            <p class="tg">T &amp; G</p>
         </header>
 
         <section class="card mb-4">
