--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Estilos -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.1/firebase-firestore-compat.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -55,22 +56,28 @@
                     <div class="mb-3">
                         <label for="image" class="form-label">Foto (opcional)</label>
                         <input type="file" id="image" accept="image/*" class="form-control">
-                        </div>
-                        <div class="mb-3">
-                            <label for="autor" class="form-label">Quem registrou</label>
-                            <select id="autor" class="form-select" required>
-                                <option value="">Selecione</option>
-                                <option value="Thomas">Thomas</option>
-                                <option value="Gabriela">Gabriela</option>
-                            </select>
-                        </div>
+                    </div>
+                    <div class="mb-3">
+                        <label for="autor" class="form-label">Quem registrou</label>
+                        <select id="autor" class="form-select" required>
+                            <option value="">Selecione</option>
+                            <option value="Thomas">Thomas</option>
+                            <option value="Gabriela">Gabriela</option>
+                        </select>
+                    </div>
                     <button type="submit" class="btn btn-primary w-100">Salvar Memória</button>
                 </form>
             </div>
         </section>
 
         <section>
-            <h2 class="h5 text-primary mb-3">Memórias</h2>
+            <div class="d-flex justify-content-between align-items-center mb-3">
+                <h2 class="h5 text-primary mb-0">Memórias</h2>
+                <button id="orderToggle" class="btn btn-outline-secondary btn-sm">
+                    <i id="orderIcon" class="bi bi-arrow-down-up"></i>
+                </button>
+            </div>
+
             <div id="memoriesContainer" class="row g-3"></div>
         </section>
 
