--- a/index.html
+++ b/index.html
@@ -71,13 +71,30 @@
         </section>
 
         <section>
-            <div class="d-flex justify-content-between align-items-center mb-3">
-                <h2 class="h5 text-primary mb-0">Memórias</h2>
-                <button id="orderToggle" class="btn btn-outline-secondary btn-sm">
-                    <i id="orderIcon" class="bi bi-arrow-down-up"></i>
-                </button>
-            </div>
+            <div class="card p-3 mb-4">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2 class="h5 text-primary mb-0">Memórias</h2>
+                    <div class="d-flex align-items-center gap-2">
+                        <div id="loadingSpinner" class="spinner-border spinner-border-sm text-secondary d-none"
+                            role="status">
+                            <span class="visually-hidden">Carregando...</span>
+                        </div>
+                        <button id="orderToggle" class="btn btn-outline-secondary btn-sm" title="Inverter ordem">
+                            <i id="orderIcon" class="bi bi-arrow-down-up"></i>
+                        </button>
+                    </div>
+                </div>
 
+                <div class="progress mt-3" style="height: 20px; border-radius: 6px; font-size: 0.8rem;">
+                    <div id="progress-thomas" class="progress-bar bg-primary text-white text-center" role="progressbar"
+                        style="width: 0%">0</div>
+                    <div id="progress-gabriela" class="progress-bar text-white text-center"
+                        style="background-color: #e75480; width: 0%" role="progressbar">0</div>
+                </div>
+                <div class="text-end small mt-1 text-muted">
+                    Total: <span id="count-total">0</span>
+                </div>
+            </div>
             <div id="memoriesContainer" class="row g-3"></div>
         </section>
 
