--- a/index.html
+++ b/index.html
@@ -150,14 +150,16 @@
 
         <div class="modal fade" id="popupMessageModal" tabindex="-1">
             <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title">Mensagem para você 💌</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <div class="modal-content carta">
+                    <div class="modal-header border-0">
+                        <h5 class="modal-title w-100 text-center">💌 Uma cartinha para você</h5>
                     </div>
-                    <div class="modal-body" id="popupMessageContent"></div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Ok</button>
+                    <div class="modal-body text-center fs-5" id="popupMessageContent"></div>
+                    <div class="modal-footer justify-content-center border-0">
+                        <button type="button" class="border-0 bg-transparent fs-1" data-bs-dismiss="modal"
+                            title="Fechar">
+                            ❤️
+                        </button>
                     </div>
                 </div>
             </div>
