--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                     </div>
                     <div class="modal-body text-center fs-5" id="popupMessageContent"></div>
                     <div class="modal-footer justify-content-center border-0">
-                        <button type="button" class="border-0 bg-transparent fs-1" data-bs-dismiss="modal"
+                        <button type="button" id="markAsReadBtn" class="border-0 bg-transparent fs-1" data-bs-dismiss="modal"
                             title="Fechar">
                             ❤️
                         </button>
