--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             </div>
         </div>
 
-        <div class="modal fade" id="popupMessageModal" tabindex="-1">
+        <div class="modal fade" id="popupMessageModal" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
             <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content carta">
                     <div class="modal-header border-0">
@@ -156,8 +156,7 @@
                     </div>
                     <div class="modal-body text-center fs-5" id="popupMessageContent"></div>
                     <div class="modal-footer justify-content-center border-0">
-                        <button type="button" id="markAsReadBtn" class="border-0 bg-transparent fs-1" data-bs-dismiss="modal"
-                            title="Fechar">
+                        <button type="button" id="markAsReadBtn" class="border-0 bg-transparent fs-1" title="Fechar">
                             ❤️
                         </button>
                     </div>
