--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         <!-- Easter Egg Form -->
         <div id="easterEggForm" class="card p-3 mb-4 d-none">
             <h5 class="text-primary">Mensagem surpresa 💌</h5>
-            <form id="sendMessageForm" class="d-flex flex-column flex-md-row gap-2">
-                <select id="toUser" class="form-select w-100 w-md-auto">
-                    <option value="Gabriela">Para Gabriela</option>
-                    <option value="Thomas">Para Thomas</option>
-                </select>
-                <input type="text" id="messageText" class="form-control w-100" placeholder="Digite a mensagem..."
-                    required>
-                <button type="submit" class="btn btn-primary w-100 w-md-auto">Enviar</button>
+            <form id="sendMessageForm" class="d-flex flex-column flex-md-row gap-2 align-items-md-center">
+                <div class="d-flex align-items-center gap-1">
+                    <span class="fw-bold text-secondary">Para:</span>
+                    <span id="messageToLabel" class="fw-bold">Gabriela</span>
+                </div>
+                <input type="hidden" id="toUser">
+                <input type="text" id="messageText" class="form-control" placeholder="Digite a mensagem..." required>
+                <button type="submit" class="btn btn-primary">Enviar</button>
             </form>
         </div>
 
