--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
 
         <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-            <div id="messageToast" class="toast align-items-center text-bg-success border-0" role="alert" aria-live="assertive"
-                aria-atomic="true">
+            <div id="messageToast" class="toast align-items-center text-bg-success border-0" role="alert"
+                aria-live="assertive" aria-atomic="true">
                 <div class="d-flex">
                     <div class="toast-body">
                         Mensagem enviada! 💌
