--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosso Diário</title>
 
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#e75480">
 
@@ -289,3 +291,4 @@
 </body>
 
 </html>
+
