--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- Fontes & Estilos -->
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Luxurious+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Meta OG -->
@@ -35,6 +36,10 @@
     <meta name="twitter:description" content="Nossos momentos especiais reunidos em um só lugar.">
     <meta name="twitter:image" content="https://thomasmfontes.github.io/diario/capa.jpg">
 </head>
+
+<style>
+
+</style>
 
 <body>
     <div class="container py-5">
@@ -138,8 +143,9 @@
                         </div>
 
                         <div class="mb-3">
-                            <label for="image" class="form-label">Foto (opcional)</label>
-                            <input type="file" id="image" accept="image/*" class="form-control">
+                            <label for="images" class="form-label">Fotos (opcional, pode escolher várias)</label>
+                            <input type="file" id="images" accept="image/*" class="form-control" multiple>
+                            <small class="text-muted" id="imagesHelp"></small>
                         </div>
 
                         <div class="mb-3">
@@ -288,7 +294,20 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+    <script>
+        document.addEventListener('change', (e) => {
+            if (e.target && e.target.id === 'images') {
+                const h = document.getElementById('imagesHelp');
+                h.textContent = e.target.files.length
+                    ? `${e.target.files.length} selecionada(s)`
+                    : '';
+            }
+        });
+    </script>
+
 </body>
 
 </html>
-
