--- a/index.html
+++ b/index.html
@@ -167,7 +167,12 @@
                             </select>
                         </div>
 
-                        <button type="submit" class="btn btn-primary w-100">Salvar Memória</button>
+                        <button type="submit"
+                            class="btn btn-primary w-100 d-flex align-items-center justify-content-center gap-2">
+                            <span class="spinner-border spinner-border-sm d-none" role="status"
+                                aria-hidden="true"></span>
+                            <span>Salvar Memória</span>
+                        </button>
                     </form>
                 </div>
             </div>
